brand-ner version 1.6

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<footer class="site-footer">
+<!-- <footer class="site-footer">
     Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>. Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>. <a href="/imprint">Imprint</a>
-  </footer>
+  </footer> -->
 </main><!-- main-content -->
 </body>
 </html>
