--- a/assets/css/includes/_syntax.scss
+++ b/assets/css/includes/_syntax.scss
@@ -4,15 +4,14 @@
 
 background: #111111; 
 
-color: #ffffff ;
+	color: #ffffff ;
 
-padding: 0.2em 0.9em;
-  margin-bottom: 1em;
+	padding: 0.2em 0.9em;
+  	margin: 1em 0;
 	font: normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;
-  line-height: 1.1em;
-  overflow: auto;
+  	line-height: 1.1em;
+  	overflow: auto;
 	font-size: 1.0em;
-	border: 1px solid #CCC;
 }
 
 
