--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-<section class="single__article">
+<article class="article">
             <h2 class="single__article--headline">{{page.title}}</h2>
             <nav class="guide__nav">
             	{% if page.prev_page %} 
@@ -20,5 +20,5 @@
             		<a href="{{ page.next_page }}" class="guide__nav--link next">Next Page</a> 
             	{% endif %}
             </nav>
-</section>
+</article>
 {% include footer.html %}
