--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,675 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);.highlight .hll{background-color:#333}.highlight{background:#111111;color:#fff;padding:0.2em 0.9em;margin-bottom:1em;font:normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;line-height:1.1em;overflow:auto;font-size:1.0em;border:1px solid #CCC}code,pre{font-family:"Consolas", "Courier New", "Courier", "FreeMono", monospace;font-size:0.95em;margin:1em 0 1.5em 0}.highlight span{font-family:"Consolas", "Courier New", "Courier", "FreeMono", monospace;font-size:1em}.highlight .hll{background-color:#49483e}.highlight{color:#f8f8f2}.highlight .c{color:#75715e}.highlight .err{color:#960050;background-color:#1e0010}.highlight .k{color:#66d9ef}.highlight .l{color:#ae81ff}.highlight .n{color:#f8f8f2}.highlight .o{color:#f92672}.highlight .p{color:#f8f8f2}.highlight .cm{color:#75715e}.highlight .cp{color:#75715e}.highlight .c1{color:#75715e}.highlight .cs{color:#75715e}.highlight .ge{font-style:italic}.highlight .gs{font-weight:bold}.highlight .kc{color:#66d9ef}.highlight .kd{color:#66d9ef}.highlight .kn{color:#f92672}.highlight .kp{color:#66d9ef}.highlight .kr{color:#66d9ef}.highlight .kt{color:#66d9ef}.highlight .ld{color:#e6db74}.highlight .m{color:#ae81ff}.highlight .s{color:#e6db74}.highlight .na{color:#a6e22e}.highlight .nb{color:#f8f8f2}.highlight .nc{color:#a6e22e}.highlight .no{color:#66d9ef}.highlight .nd{color:#a6e22e}.highlight .ni{color:#f8f8f2}.highlight .ne{color:#a6e22e}.highlight .nf{color:#a6e22e}.highlight .nl{color:#f8f8f2}.highlight .nn{color:#f8f8f2}.highlight .nx{color:#a6e22e}.highlight .py{color:#f8f8f2}.highlight .nt{color:#f92672}.highlight .nv{color:#f8f8f2}.highlight .ow{color:#f92672}.highlight .w{color:#f8f8f2}.highlight .mf{color:#ae81ff}.highlight .mh{color:#ae81ff}.highlight .mi{color:#ae81ff}.highlight .mo{color:#ae81ff}.highlight .sb{color:#e6db74}.highlight .sc{color:#e6db74}.highlight .sd{color:#e6db74}.highlight .s2{color:#e6db74}.highlight .se{color:#ae81ff}.highlight .sh{color:#e6db74}.highlight .si{color:#e6db74}.highlight .sx{color:#e6db74}.highlight .sr{color:#e6db74}.highlight .s1{color:#e6db74}.highlight .ss{color:#e6db74}.highlight .bp{color:#f8f8f2}.highlight .vc{color:#f8f8f2}.highlight .vg{color:#f8f8f2}.highlight .vi{color:#f8f8f2}.highlight .il{color:#ae81ff}.wrapper{letter-spacing:-0.31em}.sidebar,.content,.single__article--footer{letter-spacing:0em;display:inline-block;vertical-align:top}.single__article--footer .single__article--footer-item{letter-spacing:0em;display:inline-block;vertical-align:top;margin-left:-0.31em}.single__article--footer .single__article--footer-item:first-of-type{margin-left:0em}[class*="entypo-"]:before{font-family:'entypo', sans-serif}*{margin:0;padding:0;position:relative;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}body{font:1rem/1.2rem "Ubuntu",sans-serif;color:#08050e;background:#fff;border-top:5px solid #40a0be}a{color:#40a0be;text-decoration:none;border-bottom:1px solid #40a0be}a:hover{border-bottom:none;color:#08050e}.wrapper{width:100%;max-width:70em;margin:2em auto}.page--cv h3{padding:1em !important;border-bottom:1px solid #999;border-top:1px solid #999;margin-top:1em}.sidebar{width:100%;max-width:17em;background:#f3f3f3}.sidebar h1{padding:1em 0 0 0.5em;font-size:2em}.sidebar p{padding:1em}.sidebar img{width:100%}nav{width:100%;background:#333;padding:0.5em}nav li,nav a{display:inline;color:#fff;text-decoration:none;border-bottom:none;padding:0 1em 0 0}nav li:hover,nav a:hover{color:#40a0be}.social{margin:.5em 0}.elsewhere{display:inline;padding:.5em;margin:0 0 .5em 0;color:black;border-bottom:none}.elsewhere:hover{color:#40a0be}.content{width:100%;max-width:50em;margin-left:2em;line-height:1.65em}.single__article{margin-bottom:2.5em;background:#f3f3f3}.single__article p{padding:0.5em 1em 1em 1em}.single__article p>code{background:#333;padding:.3em .5em;color:#fff;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px}.single__article ul{padding:0 2em;list-style-type:square}.single__article img{width:100%}.single__article h3,.single__article h4{padding:1em 1em 0 1em}.single__article--headline{font:2.4em/2.2em "Ubuntu",sans-serif;padding:0 0.5em}.single__article--footer{width:100%;height:auto;padding:1em;color:#898989;font-size:.7em}.single__article--footer .single__article--footer-item{width:50%}.single__article--footer .single__article--footer-item:nth-child(2){text-align:right}.category{text-align:right}table{width:100%;height:auto}td{padding:1em;background:#313131;color:#fff}.love{color:#D83A31}@media all and (max-width: 60em){body{font:1rem/1.2rem "Ubuntu",sans-serif;color:#08050e;background:#fff;border-top:5px solid #40a0be}.wrapper{width:96%;margin:2em auto;display:block}.sidebar{width:100%;max-width:100%;background:#f3f3f3;display:block;margin-bottom:1.5em}.sidebar h1{padding:1em 1em 0 0.5em;font:2.5rem/2rem "Ubuntu",sans-serif}.sidebar p{padding:1em}.sidebar img{display:none}.social{display:none}nav{width:100%;background:#333;padding:1em}nav li,nav a{display:inline;color:#fff;text-decoration:none;padding:1em}nav li:hover,nav a:hover{background:#40a0be;color:#fff}.content{width:100%;max-width:100%;line-height:1.65em;margin-left:0;display:block}}
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://weloveiconfonts.com/api/?family=entypo);
+.highlight .hll {
+  background-color: #333333;
+}
+
+.highlight {
+  background: #111111;
+  color: white;
+  padding: 0.2em 0.9em;
+  margin: 1em 0;
+  font: normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;
+  line-height: 1.1em;
+  overflow: auto;
+  font-size: 1.0em;
+}
+
+code, pre {
+  font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
+  font-size: 0.95em;
+  margin: 1em 0 1.5em 0;
+}
+
+.highlight span {
+  font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
+  font-size: 1em;
+}
+
+.highlight .hll {
+  background-color: #49483e;
+}
+
+.highlight {
+  /*background: #272822;*/
+  color: #f8f8f2;
+}
+
+.highlight .c {
+  color: #75715e;
+}
+
+/* Comment */
+.highlight .err {
+  color: #960050;
+  background-color: #1e0010;
+}
+
+/* Error */
+.highlight .k {
+  color: #66d9ef;
+}
+
+/* Keyword */
+.highlight .l {
+  color: #ae81ff;
+}
+
+/* Literal */
+.highlight .n {
+  color: #f8f8f2;
+}
+
+/* Name */
+.highlight .o {
+  color: #f92672;
+}
+
+/* Operator */
+.highlight .p {
+  color: #f8f8f2;
+}
+
+/* Punctuation */
+.highlight .cm {
+  color: #75715e;
+}
+
+/* Comment.Multiline */
+.highlight .cp {
+  color: #75715e;
+}
+
+/* Comment.Preproc */
+.highlight .c1 {
+  color: #75715e;
+}
+
+/* Comment.Single */
+.highlight .cs {
+  color: #75715e;
+}
+
+/* Comment.Special */
+.highlight .ge {
+  font-style: italic;
+}
+
+/* Generic.Emph */
+.highlight .gs {
+  font-weight: bold;
+}
+
+/* Generic.Strong */
+.highlight .kc {
+  color: #66d9ef;
+}
+
+/* Keyword.Constant */
+.highlight .kd {
+  color: #66d9ef;
+}
+
+/* Keyword.Declaration */
+.highlight .kn {
+  color: #f92672;
+}
+
+/* Keyword.Namespace */
+.highlight .kp {
+  color: #66d9ef;
+}
+
+/* Keyword.Pseudo */
+.highlight .kr {
+  color: #66d9ef;
+}
+
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #66d9ef;
+}
+
+/* Keyword.Type */
+.highlight .ld {
+  color: #e6db74;
+}
+
+/* Literal.Date */
+.highlight .m {
+  color: #ae81ff;
+}
+
+/* Literal.Number */
+.highlight .s {
+  color: #e6db74;
+}
+
+/* Literal.String */
+.highlight .na {
+  color: #a6e22e;
+}
+
+/* Name.Attribute */
+.highlight .nb {
+  color: #f8f8f2;
+}
+
+/* Name.Builtin */
+.highlight .nc {
+  color: #a6e22e;
+}
+
+/* Name.Class */
+.highlight .no {
+  color: #66d9ef;
+}
+
+/* Name.Constant */
+.highlight .nd {
+  color: #a6e22e;
+}
+
+/* Name.Decorator */
+.highlight .ni {
+  color: #f8f8f2;
+}
+
+/* Name.Entity */
+.highlight .ne {
+  color: #a6e22e;
+}
+
+/* Name.Exception */
+.highlight .nf {
+  color: #a6e22e;
+}
+
+/* Name.Function */
+.highlight .nl {
+  color: #f8f8f2;
+}
+
+/* Name.Label */
+.highlight .nn {
+  color: #f8f8f2;
+}
+
+/* Name.Namespace */
+.highlight .nx {
+  color: #a6e22e;
+}
+
+/* Name.Other */
+.highlight .py {
+  color: #f8f8f2;
+}
+
+/* Name.Property */
+.highlight .nt {
+  color: #f92672;
+}
+
+/* Name.Tag */
+.highlight .nv {
+  color: #f8f8f2;
+}
+
+/* Name.Variable */
+.highlight .ow {
+  color: #f92672;
+}
+
+/* Operator.Word */
+.highlight .w {
+  color: #f8f8f2;
+}
+
+/* Text.Whitespace */
+.highlight .mf {
+  color: #ae81ff;
+}
+
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #ae81ff;
+}
+
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #ae81ff;
+}
+
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #ae81ff;
+}
+
+/* Literal.Number.Oct */
+.highlight .sb {
+  color: #e6db74;
+}
+
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #e6db74;
+}
+
+/* Literal.String.Char */
+.highlight .sd {
+  color: #e6db74;
+}
+
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #e6db74;
+}
+
+/* Literal.String.Double */
+.highlight .se {
+  color: #ae81ff;
+}
+
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #e6db74;
+}
+
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #e6db74;
+}
+
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #e6db74;
+}
+
+/* Literal.String.Other */
+.highlight .sr {
+  color: #e6db74;
+}
+
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #e6db74;
+}
+
+/* Literal.String.Single */
+.highlight .ss {
+  color: #e6db74;
+}
+
+/* Literal.String.Symbol */
+.highlight .bp {
+  color: #f8f8f2;
+}
+
+/* Name.Builtin.Pseudo */
+.highlight .vc {
+  color: #f8f8f2;
+}
+
+/* Name.Variable.Class */
+.highlight .vg {
+  color: #f8f8f2;
+}
+
+/* Name.Variable.Global */
+.highlight .vi {
+  color: #f8f8f2;
+}
+
+/* Name.Variable.Instance */
+.highlight .il {
+  color: #ae81ff;
+}
+
+/* Literal.Number.Integer.Long */
+/* the father is always the container of a Grid system. In the example it's the .wrapper class */
+.site--header, .article--footer {
+  letter-spacing: -0.31em;
+}
+
+/* every element of the Grid is a son. Notice: You need to apply the width to the specific class! */
+.one--half, .sidebar, .intro {
+  letter-spacing: 0em;
+  display: inline-block;
+  vertical-align: top;
+}
+
+/* third level nesting. It's a bit hacky but it works fine for Prototyping. */
+/* Grid Helper */
+/* grid break*/
+article {
+  padding: 1.5em;
+}
+
+/* blue */
+/* used for decoration and accents */
+/* red */
+/* used for decoration and accents */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  font: 1em/1.65 "Oswald", sans-serif;
+  width: 100%;
+  min-height: 100%;
+  background: -webkit-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
+  background: -moz-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
+  background: -o-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
+  background: linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
+}
+
+a {
+  color: #40a0be;
+  text-decoration: none;
+}
+a:hover {
+  color: #d83a31;
+}
+
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 50em;
+  margin: 2.5em auto;
+}
+
+/* Back To Top*/
+.backtop {
+  width: 2.5em;
+  height: 2.5em;
+  background: #333;
+  position: fixed;
+  top: 1.5em;
+  right: 1.5em;
+  display: none;
+  z-index: 9999;
+}
+.backtop:before {
+  content: "\2b06";
+  position: absolute;
+  top: .5em;
+  left: .85em;
+  font-family: 'entypo', sans-serif;
+}
+
+.displayed {
+  display: block;
+}
+
+/* GRID STUFF. HURRAY! */
+.one--half {
+  width: 50%;
+}
+
+.site--header {
+  width: 100%;
+  height: 10em;
+  max-width: 60em;
+  background: rgba(51, 51, 51, 0.7);
+  color: white;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+@media (max-width: 55em) {
+  .site--header {
+    width: 95%;
+    margin: 2.5em auto;
+  }
+  .site--header .sidebar {
+    width: 30%;
+  }
+  .site--header .sidebar img {
+    width: 10em;
+    height: 10em;
+  }
+  .site--header .intro {
+    width: 70%;
+    padding: .5em 0 0 .5em;
+  }
+}
+@media (max-width: 35em) {
+  .site--header {
+    width: 95%;
+    margin: 2.5em auto;
+  }
+  .site--header .sidebar {
+    width: 50%;
+  }
+  .site--header .sidebar img {
+    width: 10em;
+    height: 10em;
+  }
+  .site--header .intro {
+    width: 50%;
+    padding: .5em 0 0 .5em;
+  }
+  .site--header nav ul {
+    display: none;
+  }
+  .site--header nav select {
+    display: block;
+    width: 95%;
+    background: #cccccc;
+    color: #333;
+    border: none;
+    padding: .5em 1em;
+    position: relative;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+  }
+}
+
+.sidebar {
+  width: 20%;
+}
+.sidebar img {
+  width: 100%;
+  height: 10em;
+  -moz-border-radius-topleft: 3px;
+  -webkit-border-top-left-radius: 3px;
+  border-top-left-radius: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+nav {
+  margin: .5em 0;
+}
+nav li {
+  display: inline;
+  list-style-type: none;
+}
+nav li a {
+  padding: .3em 1.4em;
+  background: #333;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+nav li a:hover {
+  background: #dedede;
+}
+nav .nav--mobile {
+  display: none;
+}
+
+.intro {
+  width: 80%;
+  padding: 2em;
+}
+
+article {
+  font: 1em/1.65 "Lato", sans-serif;
+  margin: 2.5em 0;
+  background: rgba(51, 51, 51, 0.7);
+  color: #cccccc;
+  position: relative;
+  padding-top: 2.5em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+article h2 {
+  font: 2.5em/2.2 "Oswald", sans-serif;
+  margin: 1em 0 0 0;
+}
+article h3 {
+  font: 1.8em/2 "Lato", sans-serif;
+}
+article h4 {
+  font-size: 1.6em/1.8 "Lato", sans-serif;
+}
+@media (max-width: 35em) {
+  article h2 {
+    font: 2.5em/1.2 "Oswald", sans-serif;
+  }
+}
+
+.article--first {
+  margin: 2.5em 0;
+  background: rgba(51, 51, 51, 0.7);
+  color: #cccccc;
+  position: relative;
+  padding-top: 2.5em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+.article--first:before {
+  /* red box on the first article */
+  content: "LATEST POST";
+  color: white;
+  font-weight: 400;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: .31em;
+  word-spacing: .31em;
+  background: #d83a31;
+  border: 1px solid #89201a;
+  padding: .5em;
+  position: absolute;
+  top: -1em;
+  left: -1em;
+}
+.article--first:after {
+  /* little triangle after the box on the first article */
+  width: 0;
+  height: 0;
+  border-left: 1.4em solid #89201a;
+  border-top: 1em solid transparent;
+  content: "";
+  position: absolute;
+  top: -1em;
+  left: 8.85em;
+}
+@media (max-width: 55em) {
+  .article--first {
+    width: 95%;
+    margin: 2.5em auto;
+    background: rgba(51, 51, 51, 0.7);
+    color: #cccccc;
+    position: relative;
+    padding-top: 2.5em;
+  }
+  .article--first:before {
+    left: 1em;
+  }
+  .article--first:after {
+    left: 10.85em;
+  }
+}
+
+.has--category {
+  position: relative;
+}
+.has--category:before {
+  /* red box on the first article */
+  content: attr(data-category);
+  color: #266072;
+  text-transform: uppercase;
+  width: 8.75em;
+  /* keep it equal.. :( */
+  /* I hate using magic numbers */
+  text-align: center;
+  font-weight: 400;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: .31em;
+  word-spacing: .31em;
+  background: #40a0be;
+  border: 1px solid #266072;
+  padding: .5em;
+  position: absolute;
+  top: -1em;
+  left: -1em;
+}
+.has--category:after {
+  /* little triangle after the box on the first article */
+  width: 0;
+  height: 0;
+  border-left: 1.4em solid #266072;
+  border-top: 1em solid transparent;
+  content: "";
+  position: absolute;
+  top: -1em;
+  left: 8.85em;
+}
+@media (max-width: 55em) {
+  .has--category {
+    width: 95%;
+    margin: 2.5em auto;
+    background: rgba(51, 51, 51, 0.7);
+    color: #cccccc;
+    position: relative;
+    padding-top: 2.5em;
+  }
+  .has--category:before {
+    left: 1em;
+  }
+  .has--category:after {
+    left: 10.85em;
+  }
+}
+
+.article--read-more {
+  display: block;
+  text-align: right;
+}
+
+.article--footer {
+  font-size: .8em;
+  margin-top: 1.5em;
+  padding-top: .5em;
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+.article--footer .author {
+  text-align: right;
+}
