--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,9 +51,9 @@
   </ul>
   <select name="mobile-menu" id="mobileMenu" class="nav--mobile">
     <option value="/">Home</option>
-    <option value="about">About</option>
-    <option value="cv">CV</option>
-    <option value="archive">Archive</option>
+    <option value="/about">About</option>
+    <option value="/cv">CV</option>
+    <option value="/archive">Archive</option>
   </select>
   </nav>
 </div> <!-- intro -->
