--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,10 +50,10 @@
     <li><a href="/archive" class="nav-item">Archive</a></li>
   </ul>
   <select name="mobile-menu" id="mobileMenu" class="nav--mobile">
-    <option value="/">Home</option>
-    <option value="/about">About</option>
-    <option value="/cv">CV</option>
-    <option value="/archive">Archive</option>
+    <option value="http://kevingimbel.com/">Home</option>
+    <option value="http://kevingimbel.com/about">About</option>
+    <option value="http://kevingimbel.com/cv">CV</option>
+    <option value="http://kevingimbel.com/archive">Archive</option>
   </select>
   </nav>
 </div> <!-- intro -->
