small improvments, new time for phrases (5s)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
 
     <footer class="article--footer">
       <time class="one--half">
-        {{page.date}}
+        {{ page.date | date_to_string }}
       </time>
       <div class="author one--half">
         written by <a href="http://google.com/+KevinGimbel">Kevin Gimbel</a>
