Bug fixes [mobile menu, images in articles,...]

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,10 +38,13 @@
 <section class="wrapper">
   <header class="site--header" id="site-header">
   <aside class="sidebar">
-    <img src="/assets/img/2013_11_kevingimbel.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
+    <a href="/">
+      <img src="/assets/img/2013_11_kevingimbel.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
+    </a>
     </aside> <!-- sidebar -->
     <div class="intro">
-    <span>Hi I'm <h1 style="display:inline;">Kevin Gimbel</h1> and</span> <span id="phrase">I build things.</span>
+    <h1>Kevin Gimbel</h1>
+    <p><span id="phrase">I build things.</span></p>
 <nav class="site-navigation" role="navigation">
   <ul>
     <li><a href="/" class="nav-item">Home</a></li>
@@ -50,6 +53,7 @@
     <li><a href="/archive" class="nav-item">Archive</a></li>
   </ul>
   <select name="mobile-menu" id="mobileMenu" class="nav--mobile">
+    <option value="">MENU</option>
     <option value="http://kevingimbel.com/">Home</option>
     <option value="http://kevingimbel.com/about">About</option>
     <option value="http://kevingimbel.com/cv">CV</option>
