--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,10 +1,39 @@
 {% include header.html %}
 <article class="article">
-<h2>Archives</h2>
+    <h2>Archive</h2>
+{% for post in site.posts  %}
+    {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+    {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+    {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+    {% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 
- {% for post in site.posts %}
-    <a href="{{post.url}}"><h2 class="single__article--headline">{{ post.title }}</h2></a>
+    {% if forloop.first %}
+        <h3 class="archive--year">{{this_year}}</h3>
+        <h3>{{ this_month }}</h3>
+        <ul>
+    {% endif %}
 
+    <li class="archive--article"><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% if forloop.last %}
+    </ul>
+    {% else %}
+
+    {% if this_year != next_year %}
+    </ul>
+        <h2>{{next_year}}</h2>
+        <h3>{{ next_month }}</h3>
+        <ul>
+    {% else %}
+
+        {% if this_month != next_month %}
+        </ul>
+
+        <h3>{{ next_month }}</h3>
+        <ul>
+        {% endif %}
+    {% endif %}
+    {% endif %}
 {% endfor %}
+ <p>Build with <a href="https://github.com/katydecorah/katydecorah.github.com/blob/master/archive/index.html">this code</a> by <a href="http://katydecorah.com">Katy DeCorah</a></p>
 </article>
 {% include footer.html %}
